# my-sanctuary

./: .env.example  .gitignore  ANDROID_TRANSCRIBER_REVIEW.md  CLAUDE.md  ENV_SETUP.md  IMPLEMENTATION.md  PHASE_D_ANALYSIS.md  PHASE_D_COMPLETE.md  PHASE_E_PLAN.md  PHASE_F_CODE_STRUCTURE.md  PHASE_F_DOCUMENTATION_INDEX.md  PHASE_F_IMPLEMENTATION_COMPLETE.md  PHASE_F_IMPLEMENTATION_PLAN.md  PHASE_F_QUICK_REFERENCE.md  PHASE_G_ANALYSIS.md  PHASE_G_DOCUMENTATION_INDEX.md  PHASE_G_IMPLEMENTATION_PLAN.md  PHASE_G_QUICK_REFERENCE.md  PHASE_G_SUMMARY.md  build.gradle.kts  local.properties  native-transcription-implementation-plan.md  settings.gradle.kts  setup-env.bat  setup-env.sh
composeApp/: build.gradle.kts
core_database/: build.gradle.kts
core_network/: build.gradle.kts
core_ui/: build.gradle.kts
docs/: IMPLEMENTATION_SUMMARY.md  ai-insights-granular-implementation-plan.md  ai-insights-implementation-plan.md  async-background-processing-plan.md  insights-feature-requirements.md  native-transcription-implementation-plan.md  phase-1-test-cases.md  phase-1-todo-resolution.md  project-brief-prd-template.md  recording-pipeline-android-plan.md  recording-pipeline-detailed-plan.md  recording-pipeline-ios-plan.md  store-transcription-locally-plan.md  transcription-test-checklist.md  ui-screens-integration.md  v2-implementation-roadmap.md  voice-recording-feature-plan.md
feature_dump/: build.gradle.kts
feature_dump/src/androidMain/jni/: CMakeLists.txt  whisper_jni.cpp
feature_history/: build.gradle.kts
feature_summary/: build.gradle.kts
gradle/: libs.versions.toml
(+293 files in other folders)
